--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     -->
     <title>React App</title>
     <script src="https://kit.fontawesome.com/315e5f235b.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet"> 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
